# mister

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  test.yml
ci/: before_deploy.sh  script.sh
deploy/apply/: deployment.yaml
mister/Acceptance-Tests/: deployment.yaml  service.yaml
mister/deploy-prod/: deployment.yaml  service.yaml
mister/deploy-test/: deployment.yaml  service.yaml
mister/spilo-prod/: deployment.yaml  service.yaml
mister/spilo-test/: deployment.yaml  service.yaml
src/: main.rs  model.rs
tests/: cli.rs  delivery.yaml
tests/deploy/apply/: service.yaml
