[package]
name = "mister"
version = "0.1.3"
authors = ["herojan"]

[dependencies]
mustache = "0.9.0"
structopt = "0.2.15"
failure = "0.1.7"
exitfailure = "0.5.1"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
serde_test = "1.0"